--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(main main.cpp
         coder.cpp
-        coder.h)
+        coder.h
+        decoder.h
+        decoder.cpp)
