--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.28)
-project(ascii_85_decoder)
+project(ascii85_decoder)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(main main.cpp
+add_executable(ascii85
+        main.cpp
         coder.cpp
         coder.h
-        decoder.h
-        decoder.cpp)
+        decoder.cpp
+        decoder.h)
+
+install(TARGETS ascii85 RUNTIME DESTINATION bin)
