add simple gtest, and update CI to new tests

--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -1,19 +1,24 @@
 name: CI
 
-on: [ push, pull_request ]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install cmake
-        run: sudo apt-get update && sudo apt-get install -y cmake g++
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake g++ libgtest-dev
+          sudo cmake -S /usr/src/gtest -B /usr/src/gtest/build
+          sudo cmake --build /usr/src/gtest/build
+          sudo cp /usr/src/gtest/build/lib/*.a /usr/lib
 
-      - name: build
+      - name: Build project
         run: |
           cmake -S . -B build
           cmake --build build
@@ -21,10 +26,11 @@ jobs:
       - name: Install binary
         run: sudo cmake --install build
 
-      - name: start ascii
+      - name: Run binary
         run: |
           OUT=$(echo -n "Hello" | ascii85 -e)
           echo "OUT=$OUT"
 
-          OUT1=$(echo -n "$OUT2" | ascii85 -d)
-          echo "OUT1=$OUT1"
+      - name: Run tests
+        run: |
+          ./build/test
